--- a/Acc/classifier/www/index.html
+++ b/Acc/classifier/www/index.html
@@ -31,6 +31,7 @@
     };
 
   </script>
+
 </head>
 <body>
   <ons-splitter>
@@ -64,9 +65,13 @@
           Main
         </div>
       </ons-toolbar>
-      <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-        Swipe right to open the menu!
-      </p>
+      
+  <div style="text-align: center; margin-top: 30px;">
+    <textarea class="textarea" rows="3" placeholder="Textarea"></textarea>
+    <p style="margin-top: 30px;">
+      <ons-button onclick="login()">Sign in</ons-button>
+    </p>
+  </div>
     </ons-page>
   </ons-template>
 
