--- a/Acc/classifier/www/index.html
+++ b/Acc/classifier/www/index.html
@@ -73,6 +73,10 @@
       <ons-button onclick="submit()">Submit</ons-button>
     </p>
   </div>
+
+  <div>
+    
+  </div>
     </ons-page>
   </ons-template>
 
